--- a/src/components/layout/Sidebar/Sidebar.css
+++ b/src/components/layout/Sidebar/Sidebar.css
@@ -4,7 +4,7 @@
   width: 28px;
   height: 21px;
   right: 15px;
-  top: 16px;
+  top: 29px;
   z-index: 1001;
 }
 
@@ -57,7 +57,7 @@
   height: 30px;
   width: 30px;
   right: 15px;
-  top: 15px;
+  top: 25px;
   z-index: 1002;
 }
 
@@ -218,7 +218,7 @@ body.menu-open {
     width: 24px;
     height: 17px;
     right: 10px;
-    top: 12px;
+    top: 21px;
   }
   
   .bm-burger-button span:nth-child(1) {
@@ -235,7 +235,7 @@ body.menu-open {
   
   .bm-cross-button {
     right: 10px;
-    top: 10px;
+    top: 15px;
   }
   
   .bm-menu-wrap {
@@ -271,6 +271,18 @@ body.menu-open {
 }
 
 @media (max-width: 480px) {
+  .bm-burger-button {
+    width: 22px;
+    height: 15px;
+    right: 8px;
+    top: 17px;
+  }
+  
+  .bm-cross-button {
+    right: 8px;
+    top: 12px;
+  }
+  
   .bm-menu-wrap {
     width: 220px !important;
   }
